# learnopengl_env

./: CMakeLists.txt  README.md
include/: camera.h  mesh.h  model.h  shader.h  xcamera.h  xlog.h  xshader.h  xtime.h
include/glad/: glad.h
lib/: assimp-vc143-mtd.exp  glfw3.lib
shaders/: shader.fs  shader.vs
src/: glad.c  main.cpp  xcamera.cpp  xshader.cpp
